--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "ai": "^4.1.54",
+    "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
