basic authentication + trpc setup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+NEXT_PUBLIC_BASE_URL=""
+
 # Authentication
 BETTER_AUTH_SECRET="" # Generate with `openssl rand -base64 32`
 BETTER_AUTH_URL=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
 
 # Database
 DATABASE_URL=""
