--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/storage-blob": "^12.26.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "ai": "^4.1.54",
@@ -27,7 +28,8 @@
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
