--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@azure/storage-blob": "^12.26.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
