--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "ai": "^4.1.54",
