--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@azure/storage-blob": "^12.26.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -31,9 +33,11 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
