--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_BASE_URL=""
+NEXT_PUBLIC_API_URL=""
 
 # Authentication
 BETTER_AUTH_SECRET="" # Generate with `openssl rand -base64 32`
@@ -9,3 +10,10 @@ GOOGLE_CLIENT_SECRET=""
 
 # Database
 DATABASE_URL=""
+
+# AI
+OPENAI_API_KEY=""
+VOYAGE_API_KEY=""
+
+# Misc
+WOLFRAM_APP_ID=""
