--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@agentic/wolfram-alpha": "^7.3.3",
     "@ai-sdk/anthropic": "^1.1.15",
-    "@ai-sdk/azure": "^1.2.2",
+    "@ai-sdk/azure": "^1.2.1",
+    "@ai-sdk/openai": "^1.2.5",
     "@azure/storage-blob": "^12.26.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
@@ -20,13 +21,14 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "ai": "^4.1.54",
+    "ai": "^4.2.0",
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +43,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "voyage-ai-provider": "^1.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
