--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "^10.45.2",
     "ai": "^4.2.0",
     "better-auth": "^1.2.3",
+    "capture-video-frame": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
@@ -44,6 +45,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "video-frames": "^1.0.18",
     "voyage-ai-provider": "^1.0.1",
     "zod": "^3.24.2"
   },
